# 4D_Segmentation

./: CMakeLists.txt  LICENSE
include/: 4D_Segmentation.h  BuildGraph.h  Edges.h  GraphSegmentation.h  OpticalFlow.h  RegionTree.h  Resource.h  Segments.h  TestVideoSegmentation.h
src/: 4D_Segmentation.cpp  BuildGraph.cu  CMakeLists.txt  GraphSegmentation.cpp  OpticalFlow.cpp  RegionTree.cpp  TestVideoSegmentation.cpp
